Removed LESS that was stopping the image alignment widget from working correctly.

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -797,8 +797,6 @@
 
 	}
 	.image-img {
-		display: block;
-		text-align: center;
 		img {
 			display: inline-block;
 			border-bottom: 6px solid @color-swatch2;
